# BazelLab

./: .bazeliskrc  .bazelrc  .bazelversion  .clang-format  .clang-tidy  .gitignore  .gitlint  .pre-commit-config.yaml  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  bazel-BazelLab  bazel-bin  bazel-out  bazel-testlogs  fuzztest.bazelrc
.github/workflows/: pre_commit.yaml
scripts/: BUILD  clean_disk_cache.sh
src/common/: BUILD  BUILD.bazel  test_bench.cpp
src/lib/algo/: BUILD.bazel  RampController.hpp  RampController.test.cc
src/lib/containers/: BUILD  BUILD.bazel  circular_buffer.cc  circular_buffer.h  circular_buffer_fuzz_test.cc  circular_buffer_test.cc
src/tests/: BUILD  first_fuzz_test.cc  gtest_main.cc
src/tests/cib/: BUILD  hello-cib.cc
src/tests/cib_serial_port/: BUILD.bazel
src/tests/mp_units/: BUILD
tools/lint/: Dockerfile.analysis  README.md  docker-compose_analysis.yml  docker-compose_baseline.yml  entrypoint.sh
