""" Bazel Modules

Ce fichier définit les modules Bazel nécessaires pour le projet. Il contient également des instructions
sur la gestion des dépendances et des plates-formes de test.

Si `MODULE.bazel.lock` change localement, cela signifie que la plate-forme hôte n'a pas encore été ajoutée
au fichier de verrouillage. Exécuter `bazel mod deps` fournit une mise à jour canonique de `MODULE.bazel.lock`.
Créez une PR avec ces modifications pour inclure la plate-forme hôte.

Les plates-formes testées avec GitHub Actions sont maintenues à jour automatiquement. D'autres plates-formes
peuvent se désynchroniser en cas de changement de dépendance et doivent être mises à jour avec une PR de la
même manière qu'une plate-forme est ajoutée.
"""

# NOTE: When editing this file, also update the lockfile.
#   bazel mod deps --lockfile_mode=update

# Déclaration du module principal
module(name = "bazel_lab")

# Règle pour récupérer des archives HTTP
http_archive = use_repo_rule(
    "@bazel_tools//tools/build_defs/repo:http.bzl",
    "http_archive",
)

bazel_dep(name = "rules_cc", version = "0.0.9")

# Déclaration des dépendances
bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "abseil-cpp", version = "20240116.1")
bazel_dep(name = "re2", version = "2024-03-01")
bazel_dep(name = "googletest", version = "1.14.0.bcr.1")

google_benchmark_version = "1.8.3"

bazel_dep(name = "google_benchmark", version = google_benchmark_version)

# Déclaration de la dépendance Bazel Clang Tidy
clang_tidy_version = "d2aecc583d14c9554febeab185833c1e8cce5384"

http_archive(
    name = "bazel_clang_tidy",
    sha256 = "89c198a9f544beac119bb41904d16d8870686ccb5fe946442c1576934c9e6869",
    strip_prefix = "bazel_clang_tidy-{0}".format(clang_tidy_version),
    urls = ["https://github.com/erenon/bazel_clang_tidy/archive/{0}.tar.gz".format(clang_tidy_version)],
)

http_archive(
    name = "com_mpusz_mp_units",
    build_file = "//third_party/mp-units:BUILD.mp-units.bazel",
    sha256 = "a42057492f5a8e80442cf13602b97bb48b9c3a408bc91bdb60d86aadc84c95cc",
    strip_prefix = "mp-units-2.1.0",
    url = "https://github.com/mpusz/mp-units/archive/refs/tags/v2.1.0.tar.gz",
)

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "4689147cf4b1c2d507fd8bbb8eb748a7bbaad4ef",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)

bazel_dep(name = "rules_python", version = "0.31.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    # configure_coverage_tool = True,
    python_version = "3.12",
)
use_repo(python, "python_versions", "pythons_hub")

register_toolchains("@pythons_hub//:all")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip_deps",
    python_version = "3.12",
    requirements_lock = "//third_party/pip:requirements_lock.txt",
)
use_repo(pip, "pip_deps")

# use_repo(use_extension("//third_party/cib:direct.bzl", "load_cib"))

# toto = use_extension("//third_party/cib:direct.bzl", "load_cib")
# use_repo(toto, "com_intel_cib")

one_off_ext = use_extension("//third_party/cib:direct.bzl", "one_off_ext")
use_repo(one_off_ext, "com_intel_cib")

bazel_dep(name = "rules_fuzzing", version = "0.5.1")