load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("@rules_fuzzing//fuzzing:cc_defs.bzl", "cc_fuzz_test")

cc_library(
    name = "circular_buffer",
    srcs = ["circular_buffer.cc"],
    hdrs = ["circular_buffer.h"],
)

cc_test(
    name = "circular_buffer_test",
    srcs = ["circular_buffer_test.cc"],
    deps = [
        ":circular_buffer",
        "@googletest//:gtest",
        "@com_tesla_fixed-containers//:fixed_vector",
        "@googletest//:gtest_main",
    ],
)

cc_fuzz_test(
    name = "fuzz_test",
    srcs = ["circular_buffer_fuzz_test.cc"],
)

# cc_test(
#     name = "circular_buffer_fuzz_test",
#     srcs = ["circular_buffer_fuzz_test.cc"],
#     deps = [
#         ":circular_buffer",
#         "@com_google_fuzztest//fuzztest",
#         "@com_google_fuzztest//fuzztest:fuzztest_gtest_main",
#         "@googletest//:gtest",
#     ],
# )
